fix(admin-theme): remove dark mode for now

--- a/css/admin-theme.css
+++ b/css/admin-theme.css
@@ -34,30 +34,6 @@
   --gin-bg-app-rgb: rgb(252, 254, 254);
 }
 
-.gin--dark-mode [data-gin-accent] {
-  --gin-color-textLight: var(--wool);
-}
-
-.gin--dark-mode [data-gin-accent=light_blue] {
-  --gin-color-primary-rgb: 55, 108, 116 !important;
-  --gin-color-primary-active: var(--peacock-green) !important;
-  --gin-color-secondary: var(--mediterranean-blue) !important;
-  --gin-color-primary-hover: var(--peacock-green) !important;
-  --gin-color-primary-light: var(--robin-egg) !important;
-  --gin-border-color-layer: var(--light-gray) !important;
-  --gin-bg-layer: var(--darkest-gray) !important;
-  --gin-border-color-table-header: var(--darkest-gray) !important;
-  --gin-bg-input: #fff !important;
-  --gin-border-color-form-element: var(--light-gray) !important;
-  --gin-bg-app: #353535;
-  --gin-color-text-light: var(--light-gray);
-  --gin-color-primary-light-active: var(--robin-egg);
-  --gin-icon-color: var(--light-gray);
-  --gin-bg-layer2: #fff;
-  --gin-bg-layer3: #fff;
-  --gin-color-button-text: #fff;
-}
-
 /* affect admin paths only */
 :root .path-admin h1,
 :root .path-admin h2 {
@@ -88,63 +64,8 @@
   background: var(--wool) !important;
 }
 
-.gin--dark-mode a.cke_path_item:hover, 
-.gin--dark-mode a.cke_path_item:focus, 
-.gin--dark-mode a.cke_path_item:active {
-  color: var(--darkest-gray) !important;
-}
-
-.gin--dark-mode .glb-form-element {
-  --gin-color-text: var(--darkest-gray);
-  background-color: var(--wool) !important;
-}
-
-.gin--dark-mode .ui-widget-overlay {
-  background: var(--gin-color-primary) !important;
-  filter: brightness(50%);
-}
-
-.gin--dark-mode .ws-lb-link {
-  border-color: var(--gin-color-primary);
-}
-.gin--dark-mode .ws-lb-link__label {
-  background: var(--darkest-gray);
-}
-
-.gin--dark-mode .ui-dialog-titlebar {
-  background: var(--gin-color-primary-active) !important;
-}
-
-.gin--dark-mode .ui-dialog-titlebar .ui-dialog-title {
-  color: var(--darkest-gray) !important;
-}
-
-.gin--dark-mode .ui-dialog .ui-dialog-titlebar-close .ui-icon-closethick {
-  background: var(--darkest-gray) !important;
-}
-
 .gin-secondary-toolbar--frontend {
   background-color: var(--gin-bg-layer);
-}
-
-.gin--dark-mode [data-gin-accent="light_blue"] .ws-lb-link__label {
-  background: var(--wool) !important;
-}
-
-.gin--dark-mode [data-gin-accent="light_blue"] .ui-dialog-titlebar .ui-dialog-title {
-  color: var(--wool) !important;
-}
-
-.gin--dark-mode [data-gin-accent="light_blue"] .ui-dialog .ui-dialog-titlebar-close .ui-icon-closethick {
-  background: var(--wool) !important;
-}
-
-.gin--dark-mode [data-gin-accent=light_blue] .ui-widget-overlay {
-  background: var(--peacock-green) !important;
-}
-
-.gin--dark-mode [data-gin-accent=light_blue] .ui-dialog-titlebar {
-  background: var(--mediterranean-blue) !important;
 }
 
 [data-gin-accent=light_blue] .ui-widget-overlay {
@@ -154,7 +75,6 @@
 [data-gin-accent=light_blue] .ui-dialog-titlebar {
   background: var(--mediterranean-blue) !important;
 }
-
 
 .toolbar-menu-administration
   > .toolbar-menu
@@ -200,7 +120,6 @@
   > .toolbar-icon.is-active::after {
   background-color: var(--gin-color-primary-light) !important;
 }
-
 
 .gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab:hover .trigger::before, 
 .gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab:focus .trigger::before {
@@ -296,15 +215,6 @@ table .draggable-table.tabledrag-disabled tr:hover {
 .form-actionsÂ .layout-builder__link--add,
 .glb-action-link--icon-trash.glb-action-link {
   border-radius: 2.5rem !important;
-}
-
-.gin--dark-mode .layout-builder .layout-builder__link--add {
-  background-color: var(--gin-color-primary) !important;
-  color: var(--darkest-gray) !important;
-}
-
-.gin--dark-mode [data-gin-accent="light_blue"] .layout-builder .layout-builder__link--add {
-  color: var(--wool) !important;
 }
 
 .glb-button:not(:focus) {
